# Coliseu_Thi

./: .env  appT2.db  main.py  pyproject.toml
css/: styles.css
database/: connection.py
models/: _1models.py  models.py  schemas.py  users.py
routes/: users.py
templates/: base.html  dashboard.html  login.html  register.html
