[tool.poetry]
name = "appt2"
version = "0.1.0"
description = ""
authors = ["leonardo-009 <leonardoapelanda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = "^0.30.1"
starlette = "^0.37.2"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.19"
black = "^24.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
